# build-my-own-harness

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  LICENSE  README.md  REFERENCE.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
decisions/: 01-scaffolding.md  02-protocols.md  03-api-client-strategy.md  04-api-client-implementation.md
docs/ideas/: what-is-harness-2025.md  why-harness-2025.en.md  why-harness-2025.md
docs/learning/: capability-ladder.md  product-thinking-deep-dive.md
learnings/: 01-scaffolding.md  02-protocols.md  03-api-client.md
src/openharness/: __init__.py  __main__.py  cli.py
src/openharness/api/: __init__.py  client.py  errors.py  retry.py  translation.py
src/openharness/protocols/: __init__.py  _base.py  content.py  messages.py  requests.py  stream_events.py  tools.py  usage.py
tasks/: phase-1-plan.md  phase-1-todo.md  plan.md  todo.md
tests/: conftest.py  test_smoke.py
tests/api/: test_client.py  test_errors.py  test_retry.py  test_translation.py
tests/protocols/: test_content.py  test_integration.py  test_messages.py  test_requests.py  test_stream_events.py  test_tools.py  test_usage.py
