[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "openharness"
version = "0.0.1"
description = "A production-grade Python harness for LLM agents — built from scratch as a learning project"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "yangxiyue", email = "yangxiyuebupt@gmail.com" },
]
keywords = ["llm", "agent", "harness", "ai", "claude", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pydantic>=2.5",
    # P1-T3 sub-unit 3c.2 — openai SDK powers OpenAICompatibleApiClient
    # against any OpenAI-compatible endpoint (Qwen via DashScope is the
    # Phase 1 test target). See decisions/03-api-client-strategy.md.
    "openai>=1.50,<2.0",
    # Phase 1 will add: typer, rich
]

[project.scripts]
oh = "openharness.cli:main"
openharness = "openharness.cli:main"

[project.urls]
Homepage = "https://github.com/maisieyang/build-my-own-harness"
Documentation = "https://github.com/maisieyang/build-my-own-harness/blob/main/ARCHITECTURE.md"
Issues = "https://github.com/maisieyang/build-my-own-harness/issues"

# PEP 735 dependency groups — recognized by uv natively
[dependency-groups]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pre-commit>=3.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/openharness"]

# ---------------------------------------------------------------------------
# Ruff — lint + format (replaces flake8 + black + isort + pyupgrade)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade (auto-modernize syntax)
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",  # line too long — handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG",  # fixtures often look unused but aren't
]

# Pydantic v2 evaluates type annotations at runtime to build schemas, so type-only
# imports referenced in fields must NOT be moved into ``if TYPE_CHECKING:`` blocks.
# Listing the base classes here teaches the TCH rule to leave their subclasses alone.
[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = [
    "pydantic.BaseModel",
    "openharness.protocols._base.StrictModel",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Mypy — strict type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
warn_unused_ignores = true
show_error_codes = true
show_column_numbers = true
pretty = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false

# Pydantic mypy plugin — enforce stricter Pydantic patterns
[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--cov=openharness",
    "--cov-report=term-missing",
    "--cov-report=xml",
]

[tool.coverage.run]
source = ["src/openharness"]
branch = true

[tool.coverage.report]
# Phase 1 DoD: total project coverage ≥ 70% (per SPEC §6)
# protocols/ and api/ have stricter per-package gates (90%) enforced manually
# at module-completion checkpoints, not via this global setting.
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
